
5/12/24:
    Option to not select a trait
    Trait system reworked (easier to add traits now)
    Shop system reworked (easier to add shop items)
    Potion system reworked (easier to add new potions)
    Item class created
    Added Dark Elf art

5/11/24:
    Added stamina potion
    Can buy multiple items in shop in 1 trip
    (optimization):
        skills and attributes now bound to player on creation
        reduced redundant code in class init
5/9/24:
    Added numbers to potion selection
    Stats displays stamina
    
5/1/24:
    Fixed ending
    Continue after death (or end) prompt

4/29/24:
    Buffed reflective aura
    Nerfed enemies
    added boss (temp, for AP project turning in)
    Fixed escaping not reseting skill buffs/cooldowns
    Monster image
    Changed shop prices
    Mana Recovery scales based on max mana

4/28/24:
    New enemies
    Skill cooldowns
    Balancing
        -stamina/mp regen only occurs if not using a skill of the same cost type
    3 new Traits with skills
    Stage 2

4/27/24:
    Traits functional
    Trait selection (Power, Toughness, Mana)
    Buff

4/26/24:
    Shop functional
    Added potions
    Added Flee skill
    Added stamina implementation
    ---
    Added rest
    Added COLORS

4/24/24:    
    Began random encounters [Rest, Battle, shop]
    Balancing
    Can now display skills

4/22/24:
    Attack skill created

4/21/24:
    -Started changelog
    Basic monsters
    Stats
    Fighting
    --
    Added stamina (WIP)
    Started Skills    