@@ -1,3 +1,6 @@
+5/18/24:
+    Cleaned up Skills file
+    Nerfed Strength path
 
 5/12/24:
     Option to not select a trait
